1999-03-10  Clifford R. Conover <rconover@montana.edu>

	* gncal-todo.c (simple_todo_editor): Add support for Due Date when
	adding a TODO item here.
	(column_resized): New function
	(init_column_sorting): New function.
	(todo_click_column): New function.
	(convert_time_t_to_char, make_overdue_todo_style): New functions.

	* gnome-cal.c (gnome_calendar_todo_properties_changed): New
	function used to update the TODO when the properties have been
	chagned for it.

	* prop.c (prop_apply_todo): Apply TODO properties.

	* gncal-day-panel.c (todo_list_properties_changed): Update the
	TODO display here.

	* eventedit.c (date_edit_new): Made public

1999-03-10  Craig A Soules (soules+@andrew.cmu.edu)

	* timeutil.c, calendar.c, calobj.c, gncal-day-panel.c: Add support
	for daylight time savings.

1999-02-28  Martin Baulig  <martin@home-of-linux.org>

	* gncal-full-day.c (recompute_motion): For DRAG_MOVE, DRAG_SIZE_TOP
	and DRAG_SIZE_BOTTOM: call child_focus_out () if the child currently
	has the focus.

1999-02-27  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* quick-view.c (QUICK_VIEW_FONTSET): Added Korean font to the
	fontset string.
	* mark.h (*_FONTSET): Likewise.

1999-02-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* calobj.c (ical_object_to_vobject): Save the owner/organizer of
	the event. 
	(ical_object_create_from_vobject): Load the owner/organizer of the event.

	* gncal-full-day.c (delete_occurance): Assign child to data (fixes
	crash on "delete this occurrance").

1999-02-22  Timur Bakeyev  <mc@bat.ru>

	* calendar.c: According to configured values, use either tm.tm_zone
	or tzname. In last case, also declare it extern.
	
	* prop.c: langinfo.h not available everywhere. Wrapped. BTW, works
	fine without it.

1999-02-20  Tomas Ogren  <stric@ing.umu.se>

	* main.c (init_username): Made use of g_get_{user,real}_name() instead
	of our own home-brew...

1999-02-17  Sergey Panov <sipan@mit.edu>

	* gnome-month-item.c,gnome-month-item.h,goto.c,mark.h,